@@ -102,6 +102,8 @@ make LDFLAGS=-s "CFLAGS=$RPM_OPT_FLAGS" all
 # ok, now make sure that lilypond package will succeed,
 # even if documentation fails to build
 
+make lilypond.words
+
 make web
 
 %install
