@@ -7,6 +7,8 @@
 
 	* lilypond.words: remove file, generated by `make lilypond.words'.
 
+	* make/lilypond.{mandrake,redhat,suse}.spec.in: make lilypond.words.
+
 2003-08-31  Heikki Junes  <hjunes@cc.hut.fi>
 
 	* lily/parser.yy, lily/my-lily-lexer.cc: spell it acciaccatura.
